fix menu and ctrl for new tab #3

--- a/view/partials/home.html
+++ b/view/partials/home.html
@@ -9,8 +9,8 @@
             <a href="/category/軟體分享" class="header-categories-item"
                 >軟體分享</a
             ><a href="/tag/CSS" class="header-categories-item">CSS</a
-            ><a href="/category/網棧" class="header-categories-item">網棧</a
-            ><a href="/category/GitHub Actions" class="header-categories-item"
+            ><a href="/tag/網棧" class="header-categories-item">網棧</a
+            ><a href="/tag/GitHub Actions" class="header-categories-item"
                 >GitHub Actions</a
             >
         </div>
