可能的連結誤植 #12

--- a/view/partials/footer.html
+++ b/view/partials/footer.html
@@ -13,7 +13,7 @@
         </div>
         <div class="footer-social">
             <a
-                href="https://github.com/Edit-Mr/emblog"
+                href="https://github.com/Edit-Mr/emtech"
                 target="_blank"
                 aria-label="GitHub"
                 ><img src="/static/img/github.svg" alt="GitHub"
