被 DOM 支配的恐懼 #15

--- a/view/pages/tags.html
+++ b/view/pages/tags.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="zh-Hant">
     <head>
-        <title>毛哥EM資訊密技</title>
+        <title>{{tags}} | 毛哥EM資訊密技</title>
         {{meta}}
         <meta name="description" content="發明、技術文章與科技教學。" />
         <link rel="stylesheet" href="/static/style.css" />
