文章複合式搜尋結果問題 #16

--- a/view/pages/post.html
+++ b/view/pages/post.html
@@ -14,7 +14,7 @@
         <script type="application/ld+json">
             {
                 "@context": "https://schema.org",
-                "@type": "WebSite", // "@type": "NewsArticle",
+                "@type": "NewsArticle",
                 "name": "毛哥EM資訊密技",
                 "alternateName": ["毛哥EM", "emtech"],
                 "url": "https://emtech.cc",
