導覽標記 (BreadcrumbList) 結構化資料 #8

--- a/view/pages/post.html
+++ b/view/pages/post.html
@@ -12,7 +12,7 @@
         <meta name="og:image" content="{{thumbnail}}" />
         <meta name="og:description" content="{{description}}" />
         <script type="application/ld+json">
-            {
+        [    {
                 "@context": "https://schema.org",
                 "@type": "NewsArticle",
                 "name": "毛哥EM資訊密技",
@@ -38,6 +38,8 @@
                     "url": "https://emtech.cc"
                 }
             }
+            {{BreadcrumbList}}
+            ]
         </script>
     </head>
     <body class="">
