--- a/view/partials/about.html
+++ b/view/partials/about.html
@@ -16,9 +16,8 @@
             aria-label="Instagram"
             ><img src="/static/img/instagram.svg" alt="Instagram" /></a
         ><a
-            href="https://elvismao.com"
+            href="/p/friends"
             class="about-rarr"
-            target="_blank"
             aria-label="About"
             ><img src="/static/img/rarr.svg" alt="About"
         /></a>
