每個 post 設定 theme color #17

--- a/view/pages/post.html
+++ b/view/pages/post.html
@@ -6,7 +6,7 @@
         <meta name="description" content="{{description}}" />
         <link rel="stylesheet" href="/static/style.css" />
         <link rel="stylesheet" href="/static/nord.css" />
-
+        <meta name="theme-color" content="{{theme}}" />
         <meta name="og:title" content="{{title}}" />
         <meta name="og:url" content="https://emtech.cc/p/{{id}}" />
         <meta name="og:image" content="{{thumbnail}}" />
