--- a/view/partials/nav.html
+++ b/view/partials/nav.html
@@ -30,18 +30,12 @@
     </div>
 </nav>
 
-<input type="checkbox" id="search-toggle" checked />
+<input type="checkbox" id="search-toggle" />
 <div class="search-page">
     <div class="search-container">
         <h2>搜尋</h2>
-        <input type="search" id="search" />
+        <input type="search" id="search" placeholder="輸入一個或多個關鍵字來搜尋" />
         <div class="search-results">
-            <a href="">
-                <h3>輔仁資安特選面試心得</h3>
-                <p>
-                    輔仁大學面試教授手上不會拿你的備審，問題圍繞在當下你的自介和分享的專案。
-                </p>
-            </a>
         </div>
         <div class="google">
             找不到你要的文章？試試 <a href="https://google.com">Google</a> 吧！
