--- a/view/partials/post.html
+++ b/view/partials/post.html
@@ -35,6 +35,7 @@
             {{tldr}}
             <div class="post-content">
                 {{content}}
+                {{ad}}
                 <div class="author-container">
                     <img
                         src="/static/img/EMprofile.png"
@@ -57,7 +58,11 @@
                     </div>
                     <p>一位喜歡把簡單的事，做得不簡單的高三生。</p>
                     <div class="author-copyright">
-                        本文為原創文章，採 <a href="https://creativecommons.org/licenses/by-sa/4.0/deed.zh-hant">CC BY-SA 4.0</a>
+                        本文為原創文章，採
+                        <a
+                            href="https://creativecommons.org/licenses/by-sa/4.0/deed.zh-hant"
+                            >CC BY-SA 4.0</a
+                        >
                         授權，轉載請註明來自毛哥EM資訊密技。
                     </div>
                 </div>
