--- a/view/partials/aside.html
+++ b/view/partials/aside.html
@@ -8,6 +8,14 @@
         <p>歡迎加入 Discord 與我們一起討論。</p>
     </div>
 </a>
+<ins
+    class="adsbygoogle"
+    style="display: block"
+    data-ad-client="ca-pub-9975357988525791"
+    data-ad-slot="9160601962"
+    data-ad-format="auto"
+    data-full-width-responsive="true"
+></ins>
 <div class="recent"></div>
 <div class="aside-tags">
     <label for="hideTags" class="hideTagsLabel"></label>
