--- a/view/partials/meta.html
+++ b/view/partials/meta.html
@@ -42,8 +42,5 @@
 
     gtag("config", "G-H69XEEC798");
 </script>
-<script
-    async
-    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9975357988525791"
-    crossorigin="anonymous"
-></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9975357988525791"
+     crossorigin="anonymous"></script>
