--- a/view/partials/home.html
+++ b/view/partials/home.html
@@ -18,7 +18,7 @@
         <a href="">
             <div class="header-newPost">
                 <h2>最新文章</h2>
-                <img src="" alt="" />
+                <img src="" alt=""  onerror="this.setAttribute('src', '/static/img/blank.webp')" />
                 <div class="header-newPost-hover">
                     <h3></h3>
                 </div></div
