--- a/view/pages/home.html
+++ b/view/pages/home.html
@@ -38,6 +38,14 @@
                     "description": "發明、技術文章與科技教學。",
                     "image": "https://emtech.cc/static/img/EMprofile.png",
                     "sameAs": ["https://www.instagram.com/emtech.cc"]
+                },
+                "potentialAction": {
+                    "@type": "SearchAction",
+                    "target": {
+                        "@type": "EntryPoint",
+                        "urlTemplate": "https://emtech.cc/search?q={search_term_string}"
+                    },
+                    "query-input": "required name=search_term_string"
                 }
             }
         </script>
