improve search #39 and schema
Co-authored-by: Riley Ho <riley@rileychh.dev>

--- a/view/pages/home.html
+++ b/view/pages/home.html
@@ -13,12 +13,12 @@
         <script type="application/ld+json">
             {
                 "@context": "https://schema.org/",
-                "@type": "ProfilePage",
+                "@type": "Organization",
                 "image": "https://emtech.cc/static/img/EMprofile.png",
                 "url": "https://emtech.cc/",
                 "logo": "https://emtech.cc/static/img/EMprofile.png",
                 "name": "毛哥EM資訊密技",
-                "alternateName": ["毛哥EM", "emtech"],
+                "alternateName": ["emtech"],
                 "description": "發明、技術文章與科技教學。",
                 "email": "info@elvismao.com",
                 "contactPoint": {
@@ -31,14 +31,6 @@
                     "value": 1
                 },
                 "sameAs": ["https://www.instagram.com/emtech.cc/"],
-                "mainEntity": {
-                    "@type": "Organization",
-                    "name": "毛哥EM資訊密技",
-                    "alternateName": "毛哥EM",
-                    "description": "發明、技術文章與科技教學。",
-                    "image": "https://emtech.cc/static/img/EMprofile.png",
-                    "sameAs": ["https://www.instagram.com/emtech.cc"]
-                },
                 "potentialAction": {
                     "@type": "SearchAction",
                     "target": {
