--- a/view/pages/post.html
+++ b/view/pages/post.html
@@ -14,7 +14,7 @@
         <script type="application/ld+json">
             [    {
                     "@context": "https://schema.org",
-                    "@type": "NewsArticle",
+                    "@type": "Article",
                     "name": "毛哥EM資訊密技",
                     "alternateName": ["毛哥EM", "emtech"],
                     "url": "https://emtech.cc",
@@ -27,13 +27,15 @@
                     "datePublished": "{{date}}",
                     "dateModified": "{{lastUpdated}}",
                     "author": [
-                        {
-                            "@type": "Person",
-                            "name": "毛哥EM",
-                            "url": "https://elvismao.com"
-                        }
+                    {
+                        "@type": "Person",
+                        "name": "毛哥EM",
+                        "url": "https://elvismao.com",
+                        "image": "https://elvismao.com/img/avatar.png"
+                    }
                     ],
                     "publisher": {
+                        "@type": "Organization",
                         "name": "毛哥EM資訊密技",
                         "url": "https://emtech.cc"
                     }
