--- a/view/partials/home.html
+++ b/view/partials/home.html
@@ -14,7 +14,7 @@
                 >GitHub Actions</a
             >
         </div>
-        <a href="" aria-label="最新文章"><div class="header-info"></div></a>
+        <a href="https://zeabur.com?referralCode=Edit-Mr" aria-label="廣告宣傳"><div class="header-info"></div></a>
         <a href="">
             <div class="header-newPost">
                 <h2>最新文章</h2>
