--- a/view/pages/post.html
+++ b/view/pages/post.html
@@ -44,7 +44,7 @@
                 ]
         </script>
     </head>
-    <body class="">
+    <body class="displayPost">
         {{nav}}
         <input type="checkbox" id="hideTags" />
         <div class="main-container post-page">{{post}}</div>
