--- a/view/partials/home.html
+++ b/view/partials/home.html
@@ -21,9 +21,8 @@
             <div class="header-newPost">
                 <h2>最新文章</h2>
                 <img
-                    src=""
+                    src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
                     alt=""
-                    onerror="this.setAttribute('src', '/static/img/blank.webp')"
                 />
                 <div class="header-newPost-hover">
                     <h3></h3>
