--- a/view/partials/home.html
+++ b/view/partials/home.html
@@ -6,13 +6,10 @@
     </div>
     <div class="header-right">
         <div class="header-categories">
-            <a href="/category/軟體分享" class="header-categories-item"
-                >軟體分享</a
-            ><a href="/tag/CSS" class="header-categories-item">CSS</a
-            ><a href="/tag/網棧" class="header-categories-item">網棧</a
-            ><a href="/tag/GitHub Actions" class="header-categories-item"
-                >GitHub Actions</a
-            >
+            <a href="/p/about" class="header-categories-item">關於本站</a
+            ><a href="/rss.xml" class="header-categories-item">RSS 文章列表</a
+            ><a href="/p/friends" class="header-categories-item">友情連結</a
+            ><a href="/p/emblog" class="header-categories-item">關於 emblog</a>
         </div>
         <a href="https://zeabur.com?referralCode=Edit-Mr" aria-label="廣告宣傳"
             ><div class="header-info"></div
