CLS #147   回首頁跳一下 #43

--- a/static/style.css
+++ b/static/style.css
@@ -28,7 +28,14 @@
 }
 html {
     scroll-padding-top: 6rem;
+}
+
+html:has(.displayPost) {
     scroll-behavior: smooth;
+}
+
+.displayPost{
+    margin-bottom: 100vh;
 }
 body {
     font-family:
