--- a/view/partials/footer.html
+++ b/view/partials/footer.html
@@ -33,4 +33,6 @@
         </div>
     </div>
 </footer>
-<div class="transition"></div>
+<div class="transition">
+    <div class="believe">Patience is key in life...</div>
+</div>
