對齊文章資訊的圖示和文字
Signed-off-by: Riley Ho <riley@rileychh.dev>

--- a/static/style.css
+++ b/static/style.css
@@ -1250,6 +1250,7 @@ figure img {
     white-space: nowrap;
     display: flex;
     margin-right: 1.3rem;
+    align-items: center;
 }
 .meta img {
     height: 1rem;
