--- a/view/partials/footer.html
+++ b/view/partials/footer.html
@@ -17,6 +17,12 @@
         </div>
         <div class="footer-social">
             <a
+                href="https://github.com/Edit-Mr/emtech/issues/new/choose"
+                target="_blank"
+                aria-label="Bug Report"
+                ><img src="/static/img/warn.svg" alt="Bug Report"
+            /></a>
+            <a
                 href="https://github.com/Edit-Mr/emtech"
                 target="_blank"
                 aria-label="GitHub"
