--- a/static/style.css
+++ b/static/style.css
@@ -903,6 +903,10 @@ h4 {
     font-size: 1.1rem;
 }
 
+h5 {
+    font-size: 1.05rem;
+}
+
 aside {
     width: min(50vw, 20rem);
 }
@@ -1400,6 +1404,11 @@ figure img {
 .post-container h4 {
     margin-top: 1rem;
     margin-bottom: 0.5rem;
+}
+
+.post-container h5 {
+    margin-top: 0.5rem;
+    margin-bottom: 0.25rem;
 }
 
 figure {
