顯示 lastm update 時間 #163

--- a/view/partials/post.html
+++ b/view/partials/post.html
@@ -18,7 +18,7 @@
                 </div>
                 <div class="meta">
                     <img src="/static/img/date.svg" alt="" /><span
-                        >{{date}}</span
+                        >{{date}}{{lastmod}}</span
                     >
                 </div>
             </div>
