--- a/static/style.css
+++ b/static/style.css
@@ -471,8 +471,9 @@ header {
     color: #1d1e22;
     padding: 2rem 2rem 2rem 3rem;
     font-weight: 600;
-    background: url("/static/img/headerTitleBg.svg") no-repeat top right /
-        contain;
+    background: url("/static/img/headerTitleBg.svg") no-repeat;
+    background-size:auto 100%;
+    width: auto;
 }
 .header-title h1 {
     font-size: 3rem;
